  * performance: deferred tipping comment loading 
  * only load tipping comments for unpaid tips currently
  * solve autopay triggering (a thread? some grace status and activation by reddit thread?)
  * handle stealth mode "Tip funded." message (sent when stealth-tipping a post)
  * new "mark unread" menu item (only visible if setting "automatically mark paid tips read" is unchecked)

1.0-beta11:

  * change menu item "open browser with tipping" to "open browser to content that made you tip" (also works for stealth mode tips)
  * parse stealth mode messages
  * add menu item "open blockexplorer to recipient address"

1.0-beta10:

  * fix another bug with "linked default amount" (always used)
  * prefer exchange given in users "fiat" preferences

1.0-beta9:
  
  * fix bug: "linked default amount" used even if user is unlinked

1.0-beta8:
  
  * handle reddit server errors better (don't show error, retry after 30s)
  * new special default amount for "linked" recipients
  * remove "disallow linked" functionality

1.0-beta7:

  * translate amount_fiat header even if ec pref "show history rates" unchecked
  * new menu item: "open blockexplorer to payment tx"
  * batch "mark_read" actions through reddit api
  * don't use send to many when "pay..."ing only 1 tip (so amount can then be edited on send tab)
  * better tipUpdated implementation (less flickering und sort-screwing)
  * parse claimed/returned messages
  * new column "Acceptance Status" (can be linked, not yet linked, claimed, returned)
  * allow u/chaintip <currency_symbol><decimal> (exmaple: "u/chaintip $1")
  * "mark_read" also marks claim/returned messages
  * setting to "Disallow autopay if the user has already linked a wallet."
  * commit settings when dialog closes, not at every read/write (could speed up opening settings dialog)
  * new menu entry "open browser to tipping comment parent"
  * check for updates on first activation
  * option to mark_read paid messages

1.0-beta5:

  * fix parser again 
