@@ -8,11 +8,6 @@
 
 	* beta n+1
 
-		* really parse amount on old tips? maybe just subreddit?
-		* dowload uri -> github
-			* link to release page instead of zip?
-
-
 	* beta n+2
 
 		* copy recipient (tipee) address
