@@ -17,6 +17,7 @@ CHANGES
   * solve autopay triggering (a thread? some grace status and activation by reddit thread?)
   * handle stealth mode "Tip funded." message (sent when stealth-tipping a post)
   * new "mark unread" menu item (only visible if setting "automatically mark paid tips read" is unchecked)
+  * don't parse amount on old tips, just parse subreddit from tipping comment
 
 1.0-beta11:
 
